<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:id="@+id/activityMenu"
    android:padding="16dp"
    android:background="@color/blue">

    <TextView
        android:id="@+id/tituloMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Bienvenido"
        android:layout_marginTop="100dp"
        android:textSize="26sp"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:textStyle="bold"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tituloMenu"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:layout_marginBottom="32dp"
        android:layout_gravity="center"
        android:layout_marginTop="60dp"/>

    <Button
        android:id="@+id/listarPedidosButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/listaPedidosButtonText"
        android:textColor="@color/white"
        app:backgroundTint="@null"
        android:background="@drawable/custom_button"
        android:padding="12dp"
        android:layout_marginBottom="16dp"/>

    <Button
        android:id="@+id/realizarPedidosButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/realizarPedidoButtonText"
        android:textColor="@color/white"
        app:backgroundTint="@null"
        android:background="@drawable/custom_button"
        android:padding="12dp"
        android:layout_marginBottom="16dp"/>

    <Button
        android:id="@+id/cerrarSesionButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cerrarSesionButtonText"
        android:textColor="@color/white"
        app:backgroundTint="@null"
        android:background="@drawable/custom_button"
        android:padding="12dp"/>



</LinearLayout>